⚰️ Removed old versions code
Fixes #73